# vaylix

./: .dockerignore  .gitignore  BENCHMARKING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ERROR_CODES.md  LICENSE  LLM.md  NON_GOALS.md  PROGRESS.md  PR_0.4.0.md  PR_0.8.0.md  README.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.8.0.md  STABILITY.md  deny.toml
.cargo/: config.toml  mutants.toml
.github/workflows/: ci.yml  hardening.yml  release.yml
crates/bench/: Cargo.toml
crates/bench/src/: args.rs  client.rs  error.rs  launcher.rs  main.rs  report.rs  run.rs
crates/client/: Cargo.toml
crates/client/src/: args.rs  client.rs  config.rs  error.rs  helper.rs  main.rs  paths.rs
crates/client/src/client/: help.rs  mod.rs  render.rs  tls.rs
crates/command/: Cargo.toml
crates/command/src/: command.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/engine/: core.rs
crates/engine/: Cargo.toml
crates/engine/benches/: engine_bench.rs
crates/engine/src/: command.rs  config.rs  error.rs  lib.rs  parser.rs  paths.rs  value.rs
crates/engine/src/engine/: core.rs  mod.rs  state.rs  store.rs  traits.rs
crates/engine/src/store/: binary.rs  crypto.rs  durable.rs  keyring.rs  manifest.rs  mod.rs  serializer.rs  snapshot.rs  wal.rs
crates/engine/tests/: model_semantics.rs  recovery_characterization.rs  soak_endurance.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: admin.rs  args.rs  audit.rs  auth.rs  backup.rs  bootstrap.rs  error.rs  healthcheck.rs  init.rs  lib.rs  main.rs  metrics.rs  protocol.rs  replication.rs  response.rs  runtime_state.rs  server.rs  tls.rs
crates/server/src/auth/: mod.rs  password.rs  pattern.rs
crates/server/src/replication/: mod.rs  persistence.rs  quorum.rs  timing.rs
crates/server/src/server/: audit_events.rs  authorization.rs  commands.rs  config.rs  engine_worker.rs  ha_write_coordinator.rs  lifecycle.rs  mod.rs  read_index.rs  replication_client.rs  session.rs  transactions.rs  validation.rs
crates/server/tests/: clock_policy.rs  error_code_catalog.rs  loom_invariants.rs  network_chaos.rs  tcp_integration.rs
crates/transport/: Cargo.toml
crates/transport/benches/: transport_bench.rs
crates/transport/src/: codec.rs  constants.rs  error.rs  frame.rs  lib.rs  negotiation.rs  opcode.rs  options.rs  request.rs  response.rs
crates/transport/src/codec/: compression.rs  mod.rs
crates/transport/src/request/: mod.rs
crates/transport/src/response/: mod.rs  primitives.rs
docker/: entrypoint.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: auth_handshake.rs  command_text.rs  replication_json.rs  storage_recovery.rs  vtp_frame.rs
src/: command.rs  lexer.rs  main.rs  parser.rs  paths.rs  store.rs
src/engine/: mod.rs
src/repl/: helper.rs  mod.rs  repl.rs
src/store/: core.rs  engine.rs  mod.rs  serializer.rs  snapshot.rs  state.rs
