[package]
name = "bench"
version = "0.7.1"
edition = "2024"

[[bin]]
name = "vaylix-bench"
path = "src/main.rs"

[dependencies]
command = { path = "../command" }
transport = { path = "../transport" }
clap = { version = "4.6.1", features = ["derive", "env"] }
hdrhistogram = "7.5.4"
pin-project-lite = "0.2.17"
rand = "0.10.1"
rcgen = "0.14.8"
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-rustls = "0.26.4"
uuid = { version = "1.23.2", features = ["v7"] }
