[package]
name = "client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vaylix-client"
path = "src/main.rs"

[dependencies]
command = { path = "../command" }
transport = { path = "../transport" }
directories = "6.0.0"
rustyline = { version = "18.0.0", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
url = "2.5.7"
serde_json = "1.0.145"
rustls = "0.23.34"
rustls-native-certs = "0.8.2"
rustls-pemfile = "2.2.0"
uuid = { version = "1.18.1", features = ["v7"] }
