[package]
name = "client"
version = "0.7.1"
edition = "2024"

[[bin]]
name = "vaylix-client"
path = "src/main.rs"

[dependencies]
command = { path = "../command" }
transport = { path = "../transport" }
directories = "6.0.0"
rustyline = { version = "18.0.0", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
url = "2.5.8"
serde_json = "1.0.150"
rustls = "0.23.40"
rustls-native-certs = "0.8.4"
uuid = { version = "1.23.2", features = ["v7"] }
