[package]
name = "engine"
version = "0.5.3"
edition = "2024"

[dependencies]
directories = "6.0.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
crc32fast = "1.5.0"
command = { path = "../command" }
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
rand = "0.10.1"
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false
