[package]
name = "engine"
version = "0.10.0"
edition = "2024"
license = "MIT"

[features]
capacity-tests = []
soak-tests = []

[dependencies]
command = { path = "../command", version = "0.10.0" }
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
crc32fast = "1.5.0"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
rand = "0.10.1"
uuid = { version = "1.23.2", features = ["serde", "v7"] }
dashmap = "6.2.1"
base64 = "0.22.1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"

[[bench]]
name = "engine_bench"
harness = false
