[package]
name = "server"
version = "0.5.0"
edition = "2024"

[[bin]]
name = "vaylix"
path = "src/main.rs"

[dependencies]
command = { path = "../command" }
engine = { path = "../engine" }
transport = { path = "../transport" }
clap = { version = "4.6.1", features = ["derive", "env"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
argon2 = "0.5.3"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
rustls = "0.23.40"
tokio-rustls = "0.26.4"
uuid = { version = "1.23.2", features = ["serde", "v7"] }
x509-parser = "0.18.1"

[dev-dependencies]
tokio = { version = "1.52.3", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
rand = "0.10.1"
rcgen = "0.14.8"
