[package]
name = "transport"
version = "0.3.0"
edition = "2024"

[dependencies]
command = { path = "../command" }
bytes = "1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "macros", "rt", "rt-multi-thread"] }
crc32fast = "1.5.0"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
zstd = "0.13.3"
